frontend/portfolio-app/src/css/Custom.css
/* Custom CSS for entire project */

:root {
    --background-color-light: #efefef;
    --text-color-light: #333333;
    --highlight-color-light: #e1e1e1;
    --hover-color-light: #cccccc;

    --background-color-dark: #333333;
    --text-color-dark: #ffffff;
    --highlight-color-dark: #44444b;
    --hover-color-dark: #56565d;
}


/* LIGHT THEME COLORING*/

@media (prefers-color-scheme: light) {
    body {
        background-color: white;
        color: var(--text-color-light);
    }

    .content-section {
        background-color: var(--background-color-light);
    }

    .navbar {
        background-color: var(--highlight-color-light);
    }

    .navbar-brand {
        color: var(--text-color-light);
    }

    .bars-icon {}
    color: var(--text-color-light);

    .bars-icon:hover {
        background-color: var(--hover-color-light);
    }

    .nav-link:hover {
        background-color: var(--hover-color-light);
    }

    .offcanvas {
        background-color: var(--highlight-color-light);
        color: var(--text-color-light);
    }

    #footer {
        background-color: var(--highlight-color-light);
    }
}


/* DARK THEME COLORING */

@media (prefers-color-scheme: dark) {
    body {
        background-color: black;
        color: var(--text-color-dark);
    }

    .content-section {
        background-color: var(--background-color-dark);
        color: var(--text-color-dark);
    }

    .navbar {
        background-color: var(--highlight-color-dark);
    }

    .navbar-brand {
        color: var(--text-color-dark);
    }

    .bars-icon {}
    color: var(--text-color-dark);

    .bars-icon:hover {
        background-color: var(--hover-color-dark);
    }

    .nav-link:hover {
        background-color: var(--hover-color-dark);
    }

    .offcanvas {
        background-color: var(--highlight-color-dark);
        color: var(--text-color-dark);
    }

    .form-control {
        background-color: var(--highlight-color-dark);
        color: var(--text-color-dark);
        border-color: black;
    }

    .form-control::placeholder {
        color: var(--text-color-dark);
    }

    .form-control:focus {
        background-color: var(--hover-color-dark);
        color: var(--text-color-dark);
        border-color: black;
    }

    .btn {
        background-color: var(--highlight-color-dark);
        border-color: black;
    }

    .btn:hover {
        background-color: var(--hover-color-dark);
        border-color: black;
    }

    .btn:disabled {
        background-color: var(--highlight-color-dark);
        border-color: black;
    }

    .card {
        background-color: var(--highlight-color-dark);
        color: var(--text-color-dark);
    }

    .link {
        background-color: var(--hover-color-dark);
    }

    .accordion-button {
        background-color: var(--highlight-color-dark);
        color: var(--text-color-dark);
        border-color: black;
    }

    .accordion-button:not(.collapsed) {
        background-color: var(--highlight-color-dark);
        color: var(--text-color-dark);
        border-color: black;
    }

    .accordion-body {
        background-color: var(--highlight-color-dark);
    }

    .list-group-item {
        background-color: var(--highlight-color-dark);
        color: var(--text-color-dark);
    }

    #footer {
        background-color: var(--highlight-color-dark);
        color: var(--text-color-dark);
    }
}


/* NAVBAR & OFF-CANVAS */

.navbar {
    padding: 10px;
}

.navbar-brand {
    font-size: 2em;
    font-weight: bold;
}

.nav-item {
    margin-right: 5px;
}

.nav-link {
    font-size: 1.5em;
    padding: 20px;
}

.nav-link:hover {
    border-radius: 5px 5px;
}

.bars-icon {
    font-size: 1.5em;
}


/* CONTENT SECTIONS */

.content-section {
    text-align: center;
    font-size: 1.5em;
    padding: 50px;
}


/* FOOTER */

#footer {
    text-align: center;
    padding: 10px;
    font-size: 1.2em;
}

